# ai-video-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  MASTER_PLAN.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  kiro.md  pyproject.toml  translate-dashboard.js  translate-header.js  translate-sidebar.js
alembic/: env.py
alembic/versions/: a5b6c7d8e9f0_add_assets.py  b558c2d2cfc6_initial_schema.py  b6c7d8e9f0a1_add_audit_logs.py  c1a2b3d4e5f6_add_users_and_auth.py  c7d8e9f0a1b2_add_usage_and_billing.py  d2b3c4e5f6a7_add_user_id_to_jobs.py  e3c4d5f6a7b8_enhance_models_for_enduser.py  f4d5e6a7b8c9_add_projects_and_outputs.py  g5e6f7a8b9c0_add_constraints_and_indexes.py  h6f7g8a9b0c1_add_idempotency_key.py
apps/api/: config.py  main.py
apps/web/: .env.example  .env.local  components.json  next.config.ts  package-lock.json  package.json
apps/worker/: __init__.py
core/: database.py
core/assets/: __init__.py  models.py
core/audit/: models.py
core/auth/: models.py
core/billing/: __init__.py  models.py  service.py
core/job_queue/: __init__.py  models.py
core/model_registry/: models.py
core/monitoring/: __init__.py
core/projects/: __init__.py  models.py
core/scheduler/: __init__.py
core/storage/: __init__.py
docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
model_adapters/: __init__.py
model_adapters/base/: __init__.py
pipelines/: __init__.py
postprocessing/: __init__.py
scripts/: dev.ps1  seed_admin.py  seed_models.py  setup.ps1  test_crud.py  test_full_flow.py  test_pipeline.py
tests/: test_auth_integration.py
(+100 files in other folders)
