[project]
name = "ai-video-platform"
version = "0.1.0"
description = "AI Video Platform - Multi-model AI video generation engine"
requires-python = ">=3.10"
dependencies = [
    # API Framework
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "aiosqlite==0.22.1",
    "alembic==1.14.1",
    # Redis
    "redis[hiredis]==5.2.1",
    # Job Queue
    "arq==0.26.1",
    # Config & Validation
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    # File handling
    "python-multipart==0.0.19",
    "aiofiles==24.1.0",
    # Utilities
    "httpx==0.28.1",
    "python-ulid==3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "ruff==0.8.6",
]
gpu = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "diffusers>=0.30.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "imageio[ffmpeg]>=2.34.0",
    "Pillow>=10.0.0",
    # Optional: quantization (reduces VRAM significantly)
    # "bitsandbytes>=0.43.0",  # Linux only for now
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "core*", "model_adapters*", "pipelines*", "postprocessing*"]
